--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Learn Git and GitHub</title>
 </head>
 <body>
-    <h1> Hoc Git Hub 09/05/2021</h1>
+    <h2> Hoc Git Hub 09/05/2021</h2>
+    <p> Hoc cach su dung Git va cac lenh Git co ban</p>
 </body>
 </html>
