Add <span>Test git status

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h2> Hoc Git Hub 09/05/2021</h2>
     <p> Hoc cach su dung Git va cac lenh Git co ban</p>
+    <span>Test git status</span>
 </body>
 </html>
